<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="aryan.com.mykitapp.Dashboard">
    <LinearLayout
        android:scrollbars="vertical"
        android:layout_marginTop="54dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:weightSum="20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_weight="10"
                android:gravity="center"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/attendance">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:src="@drawable/attendance"
                    android:contentDescription="@null"/>
                <TextView
                    android:textColor="#ffbb00"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/dash_att"
                    android:textSize="25sp"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_weight="10"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/timetable">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:src="@drawable/timetable"
                    android:contentDescription="@null"/>
                <TextView
                    android:textColor="#ffbb00"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/dash_tt"
                    android:textSize="25sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:weightSum="20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_weight="10"
                android:gravity="center"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/calendar">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:src="@drawable/academin_calender"
                    android:contentDescription="@null"/>
                <TextView
                    android:textColor="#ffbb00"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/dash_calender"
                    android:textSize="25sp"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_weight="10"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/gallery">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:src="@drawable/gallery_image"
                    android:contentDescription="@null"/>
                <TextView
                    android:textColor="#ffbb00"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/dash_gallery"
                    android:textSize="25sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:weightSum="20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_weight="10"
                android:gravity="center"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/subjects">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:src="@drawable/subject"
                    android:contentDescription="@null"/>
                <TextView
                    android:textColor="#ffbb00"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/dash_subject"
                    android:textSize="25sp"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_weight="10"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/result">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:src="@drawable/result"
                    android:contentDescription="@null"/>
                <TextView
                    android:textColor="#ffbb00"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/dash_result"
                    android:textSize="25sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>